# F1ScheduleTelegramBot

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build-docker-image-and-push.yml  docker-image.yml  pylama-and-docker-build.yml
.github/workflows/python-and-poetry/: action.yaml
.run/: All pytests in tests.run.xml
F1ScheduleTelegramBot/: consts.py  database.py  main.py
f1_schedule_telegram_bot/: __init__.py  consts.py  database.py  draw_standings.py  helpers.py  ical_fetcher.py  main.py  message_handler.py
tests/: f1-calendar_p1_p2_p3_qualifying_sprint_gp.ics  test_send_weekend_calendar.py
tests/features/: handle_start.feature
tests/steps/: __init__.py  test_handle_start.py
